Don't expose images on mac if accessible name is explicitly empty

Bug: 710537
Change-Id: Ie07d134bdf655863dc36041571bd847ab27376a7